# Calculator

./: CMakeLists.txt  README.md  main.c
include/: events.h  gui.h  logic.h
src/: events.c  gui.c  logic.c
tests/: CMakeLists.txt  test_logic.c
